--- a/src/pages/articles/como-realizar-un-proyecto-con-nextjs-y-tailwind/index.mdx
+++ b/src/pages/articles/como-realizar-un-proyecto-con-nextjs-y-tailwind/index.mdx
@@ -1,7 +1,8 @@
-import { ArticleLayout } from '@/components/ArticleLayout';
-import Image from 'next/image';
-import coverImg from './cover-img.png';
-import Link from 'next/link';
+import Image from 'next/image'
+import Link from 'next/link'
+
+import { ArticleLayout } from '@/components/ArticleLayout'
+import coverImg from './cover-img.png'
 
 export const meta = {
   author: 'Edu Calvo',
@@ -11,15 +12,16 @@ export const meta = {
   tags: ['Desarrollo'],
   keywords: 'Nextjs, Tailwind, Proyecto, Aplicación web',
   description:
-    'Aprende cómo crear un proyecto moderno con Nextjs y Tailwind en cuestión de minutos. Estas herramientas te permiten crear contenido web interactivo sin tener que escribir demasiado código.'
-};
+    'Aprende cómo crear un proyecto moderno con Nextjs y Tailwind en cuestión de minutos. Estas herramientas te permiten crear contenido web interactivo sin tener que escribir demasiado código.',
+}
 
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+export default (props) => <ArticleLayout meta={meta} {...props} />
 
 <Image
   className="w-full rounded-md"
   src={coverImg}
   alt="Nextjs y Tailwind"
+  placeholder="blur"
   priority
 />
 
