--- a/src/pages/articles/por-que-uso-tailwind/index.mdx
+++ b/src/pages/articles/por-que-uso-tailwind/index.mdx
@@ -1,5 +1,6 @@
-import { ArticleLayout } from '@/components/ArticleLayout'
 import Image from 'next/image'
+
+import { ArticleLayout } from '@/components/ArticleLayout'
 import avatarArticle from './avatar.png'
 
 export const meta = {
@@ -8,19 +9,21 @@ export const meta = {
   title: 'Por que uso Tailwind',
   slug: 'por-que-uso-tailwind',
   tags: ['Diseño', 'Desarrollo'],
-  keywords: 'Tailwind, framework de CSS, clases específicas, estilos HTML, flexibilidad, reutilización, velocidad, tarjeta de perfil de usuario, ejemplo',
-  description: 'Tailwind es un framework de CSS que ofrece flexibilidad, reutilización y velocidad en la creación de sitios web. Conocé cómo se utiliza en un ejemplo de una tarjeta de perfil de usuario.'
+  keywords:
+    'Tailwind, framework de CSS, clases específicas, estilos HTML, flexibilidad, reutilización, velocidad, tarjeta de perfil de usuario, ejemplo',
+  description:
+    'Tailwind es un framework de CSS que ofrece flexibilidad, reutilización y velocidad en la creación de sitios web. Conocé cómo se utiliza en un ejemplo de una tarjeta de perfil de usuario.',
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
 ¡Tailwind es un framework de CSS que se enfoca en un enfoque de utilizar clases muy específicas para dar estilos a elementos de HTML en lugar de definir estilos en hojas de estilo. Esto puede tener varias ventajas:
 
-* Flexibilidad: al usar clases específicas, es más fácil combinarlas y modificarlas para lograr diferentes estilos sin tener que crear nuevos estilos en hojas de estilo.
+- Flexibilidad: al usar clases específicas, es más fácil combinarlas y modificarlas para lograr diferentes estilos sin tener que crear nuevos estilos en hojas de estilo.
 
-* Reutilización: al usar clases específicas, es más fácil reutilizar estilos en diferentes partes del sitio web sin tener que copiar y pegar código.
+- Reutilización: al usar clases específicas, es más fácil reutilizar estilos en diferentes partes del sitio web sin tener que copiar y pegar código.
 
-* Velocidad: al no tener que definir estilos en hojas de estilo, el código de la página web se carga más rápido y se puede trabajar de manera más eficiente.
+- Velocidad: al no tener que definir estilos en hojas de estilo, el código de la página web se carga más rápido y se puede trabajar de manera más eficiente.
 
 A continuación, se muestra un ejemplo de una tarjeta de usuario que se ha creado usando Tailwind:
 
@@ -40,16 +43,24 @@ A continuación, se muestra un ejemplo de una tarjeta de usuario que se ha cread
   </div>
 }
 ```
+
 <div className="grid grid-cols-1 gap-4 sm:grid-cols-2">
-  <div className="relative flex items-center px-6 py-5 space-x-3 bg-white border border-gray-300 rounded-lg shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
+  <div className="relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
     <div className="flex-shrink-0">
-      <Image className="w-10 h-10 rounded-full" src={avatarArticle} alt="Avatar usuario"/>
+      <Image
+        className="h-10 w-10 rounded-full"
+        src={avatarArticle}
+        alt="Avatar usuario"
+        placeholder="blur"
+      />
     </div>
-    <div className="flex-1 min-w-0">
+    <div className="min-w-0 flex-1">
       <a href="#" className="no-underline">
         <span className="absolute inset-0" aria-hidden="true"></span>
-        <p className="text-sm font-medium text-gray-900 my-0">Edu Calvo</p>
-        <p className="text-sm text-gray-500 truncate my-0">Lorem ipsum dolors</p>
+        <p className="my-0 text-sm font-medium text-gray-900">Edu Calvo</p>
+        <p className="my-0 truncate text-sm text-gray-500">
+          Lorem ipsum dolors
+        </p>
       </a>
     </div>
   </div>
