--- a/src/pages/articles/sistemas-de-diseno-para-freelance/index.mdx
+++ b/src/pages/articles/sistemas-de-diseno-para-freelance/index.mdx
@@ -1,6 +1,7 @@
-import { ArticleLayout } from '@/components/ArticleLayout';
-import Image from 'next/image';
-import coverImg from './cover-img.png';
+import Image from 'next/image'
+
+import { ArticleLayout } from '@/components/ArticleLayout'
+import coverImg from './cover-img.png'
 
 export const meta = {
   author: 'Edu Calvo',
@@ -12,15 +13,16 @@ export const meta = {
   keywords:
     'sistemas de diseño, freelance, clientes, experiencia, principios, elementos visuales, coherencia, guía de estilo, necesidades, preferencias, objetivos de marketing, consistencia, reconocimiento, tiempo, esfuerzo',
   description:
-    'En este artículo, se explica cómo utilizar un sistema de diseño como freelance para mejorar la experiencia de tus clientes y entregar proyectos de alta calidad. Se incluyen consejos sobre cómo comunicar claramente tu sistema de diseño a tus clientes y cómo asegurarte de que cumpla con sus objetivos de marketing'
-};
+    'En este artículo, se explica cómo utilizar un sistema de diseño como freelance para mejorar la experiencia de tus clientes y entregar proyectos de alta calidad. Se incluyen consejos sobre cómo comunicar claramente tu sistema de diseño a tus clientes y cómo asegurarte de que cumpla con sus objetivos de marketing',
+}
 
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+export default (props) => <ArticleLayout meta={meta} {...props} />
 
 <Image
   className="w-full rounded-md"
   src={coverImg}
   alt="Convencional Commits Cover"
+  placeholder="blur"
   priority
 />
 
