--- a/src/pages/articles/curso-de-4-semanas-de-webflow-mi-experiencia-creando-mi-primer-blog/index.mdx
+++ b/src/pages/articles/curso-de-4-semanas-de-webflow-mi-experiencia-creando-mi-primer-blog/index.mdx
@@ -2,8 +2,8 @@ import Image from 'next/image'
 import Link from 'next/link'
 
 import { ArticleLayout } from '@/components/ArticleLayout'
-import coverImg from './cover-img.png'
-import websiteImg from './website-img.png'
+import coverImg from './cover-img.jpg'
+import websiteImg from './website-img.jpg'
 
 export const meta = {
   author: 'Edu Calvo',
