--- a/src/pages/articles/tendencias-ui-2023/index.mdx
+++ b/src/pages/articles/tendencias-ui-2023/index.mdx
@@ -1,12 +1,12 @@
 import Image from 'next/image'
 
 import { ArticleLayout } from '@/components/ArticleLayout'
-import cleanDesign from './clean-design.png'
-import darkUi from './dark-ui.png'
-import hightContrast from './hight-contrast.png'
-import motionDesign from './motion-design.png'
-import softGradient from './soft-gradient.png'
-import typoGiant from './typo-giant.png'
+import cleanDesign from './clean-design.jpg'
+import darkUi from './dark-ui.jpg'
+import hightContrast from './hight-contrast.jpg'
+import motionDesign from './motion-design.jpg'
+import softGradient from './soft-gradient.jpg'
+import typoGiant from './typo-giant.jpg'
 
 export const meta = {
   author: 'Edu Calvo',
