--- a/src/pages/articles/como-realizar-un-proyecto-con-nextjs-y-tailwind/index.mdx
+++ b/src/pages/articles/como-realizar-un-proyecto-con-nextjs-y-tailwind/index.mdx
@@ -2,7 +2,7 @@ import Image from 'next/image'
 import Link from 'next/link'
 
 import { ArticleLayout } from '@/components/ArticleLayout'
-import coverImg from './cover-img.png'
+import coverImg from './cover-img.jpg'
 
 export const meta = {
   author: 'Edu Calvo',
