--- a/src/pages/articles/por-que-uso-tailwind/index.mdx
+++ b/src/pages/articles/por-que-uso-tailwind/index.mdx
@@ -1,7 +1,7 @@
 import Image from 'next/image'
+import avatarArticle from '@/images/avatar.jpg'
 
 import { ArticleLayout } from '@/components/ArticleLayout'
-import avatarArticle from './avatar.png'
 
 export const meta = {
   author: 'Edu Calvo',
@@ -59,7 +59,7 @@ A continuación, se muestra un ejemplo de una tarjeta de usuario que se ha cread
         <span className="absolute inset-0" aria-hidden="true"></span>
         <p className="my-0 text-sm font-medium text-gray-900">Edu Calvo</p>
         <p className="my-0 truncate text-sm text-gray-500">
-          Lorem ipsum dolors
+          <span>Lorem ipsum dolors</span>
         </p>
       </a>
     </div>
