--- a/src/pages/articles/sistemas-de-diseno-para-freelance/index.mdx
+++ b/src/pages/articles/sistemas-de-diseno-para-freelance/index.mdx
@@ -1,7 +1,7 @@
 import Image from 'next/image'
 
 import { ArticleLayout } from '@/components/ArticleLayout'
-import coverImg from './cover-img.png'
+import coverImg from './cover-img.jpg'
 
 export const meta = {
   author: 'Edu Calvo',
