--- a/content/aprende-a-crear-componentes-reutilizables-con-tailwind-y-nextjs.mdx
+++ b/content/aprende-a-crear-componentes-reutilizables-con-tailwind-y-nextjs.mdx
@@ -1,7 +1,7 @@
 ---
 title: Aprende a crear componentes reutilizables con Tailwind y Next.js,
 description: Aprende cómo crear componentes reutilizables de alta calidad utilizando Tailwind y Next.js para tu aplicación web. A través de los ejemplos de botón y imagen de perfil, veremos cómo crear componentes reutilizables con estas herramientas y cómo personalizarlos para satisfacer tus necesidades.
-date: '2023-01-18'
+publishedAt: '2023-01-18'
 ---
 
 <Image
