--- a/content/chatgpt-aliado-o-enemigo.mdx
+++ b/content/chatgpt-aliado-o-enemigo.mdx
@@ -1,7 +1,7 @@
 ---
 title: Chatgpt aliado o enemigo,
 description: Conoce ChatGPT, el modelo de lenguaje desarrollado por OpenAI capaz de mantener conversaciones y adaptarse a diferentes temas y estilos de conversación. Prueba ChatGPT en su sitio web oficial y diviértete conversando con él.
-date: '2022-12-03'
+publishedAt: '2022-12-03'
 ---
 
 <Image
