--- a/content/como-realizar-un-proyecto-con-nextjs-y-tailwind.mdx
+++ b/content/como-realizar-un-proyecto-con-nextjs-y-tailwind.mdx
@@ -1,7 +1,7 @@
 ---
 title: ¿Cómo realizar un proyecto con Nextjs y Tailwind?
 description: Aprende cómo crear un proyecto moderno con Nextjs y Tailwind en cuestión de minutos. Estas herramientas te permiten crear contenido web interactivo sin tener que escribir demasiado código.
-date: '2023-01-10'
+publishedAt: '2023-01-10'
 ---
 
 <Image
