--- a/content/sistemas-de-diseno-para-freelance.mdx
+++ b/content/sistemas-de-diseno-para-freelance.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sistemas de Diseño: Cómo Utilizarlos para Mejorar la Experiencia de tus Clientes
 description: En este artículo, se explica cómo utilizar un sistema de diseño como freelance para mejorar la experiencia de tus clientes y entregar proyectos de alta calidad. Se incluyen consejos sobre cómo comunicar claramente tu sistema de diseño a tus clientes y cómo asegurarte de que cumpla con sus objetivos de marketing
-date: '2023-01-03'
+publishedAt: '2023-01-03'
 ---
 
 <Image
