--- a/content/temas-y-plugins-recomendados-para-vscode.mdx
+++ b/content/temas-y-plugins-recomendados-para-vscode.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sistemas de Diseño: Temas y plugins recomendados para vscode
 description: ¡Optimiza tu workflow de desarrollo con estos plugins y temas de Visual Studio Code! Descubre mis favoritos y cómo pueden ayudarte a hacer más trabajo en menos tiempo.
-date: '2022-11-08'
+publishedAt: '2022-11-08'
 ---
 
 <Image
