--- a/content/convencional-commits.mdx
+++ b/content/convencional-commits.mdx
@@ -1,7 +1,7 @@
 ---
 title: Convencional Commits
 description: Los Convencional Commits facilitan la gestión de código al mejorar la lectura y comprensión del historial de cambios y el proceso de integración y despliegue. Utilizan prefijos y descripciones para clasificar cambios y mejorar la colaboración en equipo.
-date: '2022-12-28'
+publishedAt: '2022-12-28'
 ---
 
 <Image
