--- a/content/tendencias-ui-2023.mdx
+++ b/content/tendencias-ui-2023.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sistemas de Diseño - Tendencias UI para este 2023
 description: Conoce las tendencias en interfaz de usuario (UI) para el 2023, incluyendo diseño en movimiento, diseño limpio y minimalista, degradados suaves y multicolores y alto contraste y monocromía
-date: '2022-12-12'
+publishedAt: '2022-12-12'
 ---
 
 ¡Hola a todos!
