feat: update readme, add custom class to text and box, add tags to blog...

--- a/content/aprende-a-crear-componentes-reutilizables-con-tailwind-y-nextjs.mdx
+++ b/content/aprende-a-crear-componentes-reutilizables-con-tailwind-y-nextjs.mdx
@@ -3,7 +3,7 @@ title: Aprende a crear componentes reutilizables con Tailwind y Next.js,
 description: Aprende cómo crear componentes reutilizables de alta calidad utilizando Tailwind y Next.js para tu aplicación web. A través de los ejemplos de botón y imagen de perfil, veremos cómo crear componentes reutilizables con estas herramientas y cómo personalizarlos para satisfacer tus necesidades.
 publishedAt: '2023-01-18'
 tags: ['Desarrollo']
-keywords: componentes reutilizables Tailwind Next.js, botón reutilizable, imagen de perfil reutilizable , personalización con Tailwind
+keywords: componentes, reutilizables, Tailwind, Next.js, botón reutilizable, imagen de perfil reutilizable , personalización con Tailwind
 ---
 
 <Image
