--- a/content/chatgpt-aliado-o-enemigo.mdx
+++ b/content/chatgpt-aliado-o-enemigo.mdx
@@ -2,6 +2,8 @@
 title: Chatgpt aliado o enemigo,
 description: Conoce ChatGPT, el modelo de lenguaje desarrollado por OpenAI capaz de mantener conversaciones y adaptarse a diferentes temas y estilos de conversación. Prueba ChatGPT en su sitio web oficial y diviértete conversando con él.
 publishedAt: '2022-12-03'
+tags: ['IA', Desarrollo]
+keywords: ChatGPT, modelo de lenguaje, OpenAI, conversaciones en línea, texto humano, temas, estilos de conversación, ciencia ficción, formalidad, recordar conversaciones, herramienta, imitar lenguaje humano, sitio web oficial, probar ChatGPT, divertirse conversando
 ---
 
 <Image
