--- a/content/convencional-commits.mdx
+++ b/content/convencional-commits.mdx
@@ -2,6 +2,8 @@
 title: Convencional Commits
 description: Los Convencional Commits facilitan la gestión de código al mejorar la lectura y comprensión del historial de cambios y el proceso de integración y despliegue. Utilizan prefijos y descripciones para clasificar cambios y mejorar la colaboración en equipo.
 publishedAt: '2022-12-28'
+tags: ['Desarrollo']
+keywords: Convencional Commits, Git, mensajes de commit, proceso de integración, despliegue de código, prefijos, funcionalidades, correcciones de errores, título corto, descripción detallada, colaboración, trabajo en equipo, gestión de código
 ---
 
 <Image
