--- a/content/curso-de-4-semanas-de-webflow-mi-experiencia-creando-mi-primer-blog.mdx
+++ b/content/curso-de-4-semanas-de-webflow-mi-experiencia-creando-mi-primer-blog.mdx
@@ -2,6 +2,8 @@
 title: Curso de 4 semanas de Webflow - Mi experiencia creando mi primer blog
 description: Descubre cómo el curso de 4 semanas de Adplist sobre Webflow te permite aprender habilidades valiosas en el mundo del diseño web. Aprende sobre componentes, CMS y la interfaz de Webflow y cómo aplicarlos a tu proyecto.
 publishedAt: '2023-02-21'
+tags: ['Desarrollo', 'Diseño']
+keywords: Webflow, Adplist, curso, diseño web, componentes, CMS, sitio web, habilidades, blog, recetas saludables
 ---
 
 <Image
