--- a/content/sistemas-de-diseno-para-freelance.mdx
+++ b/content/sistemas-de-diseno-para-freelance.mdx
@@ -1,12 +1,14 @@
 ---
-title: Sistemas de Diseño: Cómo Utilizarlos para Mejorar la Experiencia de tus Clientes
+title: Sistemas de Diseño, Cómo Utilizarlos para Mejorar la Experiencia de tus Clientes
 description: En este artículo, se explica cómo utilizar un sistema de diseño como freelance para mejorar la experiencia de tus clientes y entregar proyectos de alta calidad. Se incluyen consejos sobre cómo comunicar claramente tu sistema de diseño a tus clientes y cómo asegurarte de que cumpla con sus objetivos de marketing
 publishedAt: '2023-01-03'
+tags: ['Diseño', 'Freelance']
+keywords: sistemas de diseño, freelance, clientes, experiencia, principios, elementos visuales, coherencia, guía de estilo, necesidades, preferencias, objetivos de marketing, consistencia, reconocimiento, tiempo, esfuerzo
 ---
 
 <Image
   className="w-full rounded-md"
-  src="sistema-de-diseno.jpeg"
+  src="/images/blog/cover-img-sistema-de-diseno.jpg"
   alt="Convencional Commits Cover"
   width={672}
   height={258}
