--- a/content/temas-y-plugins-recomendados-para-vscode.mdx
+++ b/content/temas-y-plugins-recomendados-para-vscode.mdx
@@ -1,7 +1,9 @@
 ---
-title: Sistemas de Diseño: Temas y plugins recomendados para vscode
+title: Temas y plugins recomendados para vscode
 description: ¡Optimiza tu workflow de desarrollo con estos plugins y temas de Visual Studio Code! Descubre mis favoritos y cómo pueden ayudarte a hacer más trabajo en menos tiempo.
 publishedAt: '2022-11-08'
+tags: ['Productividad', 'Diseño', 'Desarrollo', 'Software']
+keywords: plugins, temas, Visual Studio Code, VSCode, workflow, desarrollo, productividad, código, errores, sangría, importaciones, librerías, módulos
 ---
 
 <Image
