--- a/content/tendencias-ui-2023.mdx
+++ b/content/tendencias-ui-2023.mdx
@@ -1,7 +1,9 @@
 ---
-title: Sistemas de Diseño - Tendencias UI para este 2023
+title: Tendencias UI para este 2023
 description: Conoce las tendencias en interfaz de usuario (UI) para el 2023, incluyendo diseño en movimiento, diseño limpio y minimalista, degradados suaves y multicolores y alto contraste y monocromía
 publishedAt: '2022-12-12'
+tags: ['Diseño']
+keywords: UI, tendencias, diseño en movimiento, diseño limpio, degradados suaves, multicolores, alto contraste, monocromía, interfaces de usuario, animaciones, transiciones, paleta de colores, diseños simples, atractivas visualmente, degradados, gradientes, colores planos, contraste alto, monocromático
 ---
 
 ¡Hola a todos!
