--- a/content/por-que-uso-tailwind.mdx
+++ b/content/por-que-uso-tailwind.mdx
@@ -2,6 +2,8 @@
 title: Por que uso Tailwind
 description: Tailwind es un framework de CSS que ofrece flexibilidad, reutilización y velocidad en la creación de sitios web. Conocé cómo se utiliza en un ejemplo de una tarjeta de perfil de usuario.
 publishedAt: '2022-12-11'
+tags: ['Diseño', 'Desarrollo']
+keywords: Tailwind, framework de CSS, clases específicas, estilos HTML, flexibilidad, reutilización, velocidad, tarjeta de perfil de usuario, ejemplo
 ---
 
 ¡Tailwind es un framework de CSS que se enfoca en un enfoque de utilizar clases muy específicas para dar estilos a elementos de HTML en lugar de definir estilos en hojas de estilo. Esto puede tener varias ventajas:
