fix: og projects

--- a/content/proyectos/dentaid-waterpik.mdx
+++ b/content/proyectos/dentaid-waterpik.mdx
@@ -1,7 +1,7 @@
 ---
 title: Dentaid & Waterpike
 description: Implementación de funcionalidades en distintas tiendas online para varios países Dentaid y Waterpik en Prestashop.
-image: /images/proyectos/cover-dentaid.jpg
+cover: /images/proyectos/cover-dentaid.jpg
 link: 'https://www.dentaidcomprasonline.pe/'
 publishedAt: '2022-07-15'
 tags: ['Desarrollo']
