--- a/content/proyectos/janeworld.mdx
+++ b/content/proyectos/janeworld.mdx
@@ -1,7 +1,7 @@
 ---
 title: Janeworld
 description: Implementación de funcionalidades en multitiendas Janeworld y Becool en Prestashop.
-image: /images/proyectos/cover-janeworld.jpg
+cover: /images/proyectos/cover-janeworld.jpg
 link: 'https://janeworld.com/'
 publishedAt: '2022-06-15'
 tags: ['UI', 'Maquetación', 'Frontend']
