--- a/content/proyectos/semillas-vivas.mdx
+++ b/content/proyectos/semillas-vivas.mdx
@@ -1,7 +1,7 @@
 ---
 title: Semillas Vivas
 description: Rediseño y Frontend de tienda online en Prestashop.
-image: /images/proyectos/cover-semillasvivas.jpg
+cover: /images/proyectos/cover-semillasvivas.jpg
 link: 'https://www.semillasvivas.bio/es/'
 publishedAt: '2021-05-15'
 tags: ['UI', 'Maquetación', 'Frontend']
