--- a/content/proyectos/sms.mdx
+++ b/content/proyectos/sms.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sms Net2phone
 description: Dashboard en Laravel para el envío y gestión de sms para la empresa Net2phone.
-image: /images/proyectos/cover-smsnet2phone.jpg
+cover: /images/proyectos/cover-smsnet2phone.jpg
 link: 'https://sms.net2phone.es/login'
 publishedAt: '2018-08-15'
 tags: ['UI', 'Maquetación', 'Frontend']
