--- a/content/proyectos/tantraspain.mdx
+++ b/content/proyectos/tantraspain.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tantra Spain
 description: Website en Laravel con catálogo auto gestionable por el cliente.
-image: /images/proyectos/cover-tantraspain.jpg
+cover: /images/proyectos/cover-tantraspain.jpg
 link: 'https://tantraspain.com/'
 publishedAt: '2017-09-15'
 tags: ['UI', 'Maquetación', 'Frontend']
