--- a/content/proyectos/aneto.mdx
+++ b/content/proyectos/aneto.mdx
@@ -1,7 +1,7 @@
 ---
 title: Aneto
 description: Rediseño de tienda online realizada en Prestashop para la empresa Aneto.
-image: /images/proyectos/cover-aneto.jpg
+cover: /images/proyectos/cover-aneto.jpg
 link: 'https://tiendaneto.com/es/'
 publishedAt: '2022-10-15'
 tags: ['UI', 'Maquetación', 'Frontend']
